Upgrade Cucumber, use picocontainer.
Update to using a newer version of Cucumber, which has a different
groupId.

Convert to using picocontainer so steps can share code/data.

--- a/graphics.raytrace/pom.xml
+++ b/graphics.raytrace/pom.xml
@@ -12,7 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cucumber.version>1.2.5</cucumber.version>
+    <cucumber.version>4.2.4</cucumber.version>
     <junit.version>4.12</junit.version>
   </properties>
 
@@ -24,14 +24,20 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>info.cukes</groupId>
+      <groupId>io.cucumber</groupId>
       <artifactId>cucumber-java</artifactId>
       <version>${cucumber.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>info.cukes</groupId>
+      <groupId>io.cucumber</groupId>
       <artifactId>cucumber-junit</artifactId>
+      <version>${cucumber.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-picocontainer</artifactId>
       <version>${cucumber.version}</version>
       <scope>test</scope>
     </dependency>
