--- a/graphics.raytrace/src/main/java/org/intranet/graphics/raytrace/yml/11-patterns-reflect_refract.yml
+++ b/graphics.raytrace/src/main/java/org/intranet/graphics/raytrace/yml/11-patterns-reflect_refract.yml
@@ -126,6 +126,21 @@
     - [ scale, 0.75, 0.75, 0.75 ]
     - [ translate, 1.0, 1.5, 0.5 ]
 
+# TRANSPARENT SPHERE
+- add: sphere
+  material:
+    color: [ 0.3, 0.3, 0.3 ]
+    # reflective: 0.7
+    transparency: 0.7
+    ambient: 0.0
+    diffuse: 0.1
+    specular: 0.0
+  transform:
+    - [ rotate-z, 0.77 ]
+    - [ rotate-y, 0.77 ]
+    - [ scale, 0.5, 0.5, 0.5 ]
+    - [ translate, 0.0, 1.0, -1.5 ]
+
 # Gradient Sphere
 - add: sphere
   material: gradient-material
