11 Reflection and Refraction
Passing refraction tests through Test #8.
Re-created the sample picture showing the difference between the
straight refraction implementation and the Schlick algorithm.

--- a/graphics.raytrace/src/main/java/org/intranet/graphics/raytrace/yml/11-patterns-reflect_refract.yml
+++ b/graphics.raytrace/src/main/java/org/intranet/graphics/raytrace/yml/11-patterns-reflect_refract.yml
@@ -131,6 +131,7 @@
   material:
     color: [ 0.3, 0.3, 0.3 ]
     # reflective: 0.7
+    refractive: 0.6
     transparency: 0.7
     ambient: 0.0
     diffuse: 0.1
