refraction-bend.yml
Add a comment identifying where it is from.

--- a/graphics.raytrace/src/main/java/org/intranet/graphics/raytrace/yml/refraction-bend.yml
+++ b/graphics.raytrace/src/main/java/org/intranet/graphics/raytrace/yml/refraction-bend.yml
@@ -1,3 +1,4 @@
+# From http://forum.raytracerchallenge.com/thread/114/refraction-results-unclear
 # ======================================================
 # refraction-bend.yml
 #
